fixes dark mode header border

--- a/frontend/app/main.sass
+++ b/frontend/app/main.sass
@@ -172,6 +172,9 @@ html, body, #root
   .removed-reason-remover
     font-style: italic
 
+.pt-dark .pt-card.time-settings
+  border-top: none
+
 .pt-card.time-settings
   z-index: $pt-z-index-overlay + 10
   border-top: none
